--- a/app/src/main/res/layout/module_layout_main.xml
+++ b/app/src/main/res/layout/module_layout_main.xml
@@ -11,7 +11,15 @@
     tools:context="com.example.ymt.sinasdktest.MainActivity">
 
     <TextView
+        android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
+
+    <Button
+        android:id="@+id/share"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textview"
+        android:text="share" />
 </RelativeLayout>
